[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/playerC.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/player.png" type="Texture" id=3]
[ext_resource path="res://sprites/player_2-1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/player_3-1.png" type="Texture" id=6]
[ext_resource path="res://sprites/player_3.png" type="Texture" id=7]
[ext_resource path="res://sound/sfx/enemy_shoot.wav" type="Sample" id=8]
[ext_resource path="res://sound/sfx/player_explode.wav" type="Sample" id=9]
[ext_resource path="res://sound/sfx/player_hit2.wav" type="Sample" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 26.7293

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 3 ) ], "loop":false, "name":"health3", "speed":1.0 } ]

[sub_resource type="SpriteFrames" id=3]

animations = [ { "frames":[ ExtResource( 4 ), ExtResource( 5 ) ], "loop":false, "name":"health2", "speed":1.0 } ]

[sub_resource type="SpriteFrames" id=4]

animations = [ { "frames":[ ExtResource( 6 ), ExtResource( 7 ) ], "loop":false, "name":"health1", "speed":1.0 } ]

[sub_resource type="SampleLibrary" id=5]

samples/player_shoot = { "db":-5.0, "pitch":1.2, "sample":ExtResource( 8 ) }

[sub_resource type="SampleLibrary" id=6]

samples/player_explode = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/player_hit2 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 10 ) }

[node name="player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
bullet_tscn = ExtResource( 2 )
MOTION_SPEED = 580
total_health = 3
command_active = false

[node name="health3" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "health3"
offset = Vector2( 0, -9 )

[node name="health2" type="AnimatedSprite" parent="."]

visibility/visible = false
frames = SubResource( 3 )
animation = "health2"
offset = Vector2( 3.5, -10 )

[node name="health1" type="AnimatedSprite" parent="."]

visibility/visible = false
frames = SubResource( 4 )
animation = "health1"
offset = Vector2( 0.5, -22 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="muzzle" type="Position2D" parent="."]

transform/pos = Vector2( 0, -60 )

[node name="bullet_container" type="Node" parent="."]

[node name="hit_explode_container" type="Node" parent="."]

[node name="gun_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.09
one_shot = true
autostart = false

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sample_player_stat" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


